--- a/src/Mod/Mesh/Gui/CMakeLists.txt
+++ b/src/Mod/Mesh/Gui/CMakeLists.txt
@@ -129,7 +129,7 @@ fc_target_copy_resource(MeshGui
     ${CMAKE_BINARY_DIR}/Mod/Mesh
     InitGui.py)
 
-SET_BIN_DIR(MeshGui "MeshGui" "/Mod/Mesh")
+SET_BIN_DIR(MeshGui MeshGui /Mod/Mesh)
 if(WIN32)
     set_target_properties(MeshGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
