--- a/src/Mod/Raytracing/App/CMakeLists.txt
+++ b/src/Mod/Raytracing/App/CMakeLists.txt
@@ -83,7 +83,7 @@ fc_target_copy_resource(Raytracing
     ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_DATADIR}/Mod/Raytracing
     ${Raytracing_Templates})
 
-SET_BIN_DIR(Raytracing "Raytracing" "/Mod/Raytracing")
+SET_BIN_DIR(Raytracing Raytracing /Mod/Raytracing)
 if(WIN32)
     set_target_properties(Raytracing PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
