--- a/src/Mod/Robot/Gui/CMakeLists.txt
+++ b/src/Mod/Robot/Gui/CMakeLists.txt
@@ -153,7 +153,7 @@ fc_target_copy_resource(RobotGui
     ${CMAKE_BINARY_DIR}/Mod/Robot
     InitGui.py MovieTool.py)
 
-SET_BIN_DIR(RobotGui "RobotGui" "/Mod/Robot")
+SET_BIN_DIR(RobotGui RobotGui /Mod/Robot)
 if(WIN32)
     set_target_properties(RobotGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
