--- a/src/Mod/Sandbox/Gui/CMakeLists.txt
+++ b/src/Mod/Sandbox/Gui/CMakeLists.txt
@@ -49,7 +49,7 @@ fc_target_copy_resource(SandboxGui
     ${CMAKE_BINARY_DIR}/Mod/Sandbox
     InitGui.py)
 
-SET_BIN_DIR(SandboxGui "SandboxGui" "/Mod/Sandbox")
+SET_BIN_DIR(SandboxGui SandboxGui /Mod/Sandbox)
 if(WIN32)
     set_target_properties(SandboxGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
