--- a/src/Mod/Sketcher/Gui/CMakeLists.txt
+++ b/src/Mod/Sketcher/Gui/CMakeLists.txt
@@ -114,7 +114,7 @@ fc_target_copy_resource(SketcherGui
     ${CMAKE_BINARY_DIR}/Mod/Sketcher
     ${SketcherGui_Scripts})
 
-SET_BIN_DIR(SketcherGui "SketcherGui" "/Mod/Sketcher")
+SET_BIN_DIR(SketcherGui SketcherGui /Mod/Sketcher)
 if(WIN32)
     set_target_properties(SketcherGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
