--- a/src/Mod/Test/Gui/CMakeLists.txt
+++ b/src/Mod/Test/Gui/CMakeLists.txt
@@ -55,7 +55,7 @@ add_dependencies(QtUnitGui Test)
 
 fc_copy_sources(QtUnitGui "${CMAKE_BINARY_DIR}/Mod/Test" qtunittest.py)
 
-SET_BIN_DIR(QtUnitGui "QtUnitGui" "/Mod/Test")
+SET_BIN_DIR(QtUnitGui QtUnitGui /Mod/Test)
 if(WIN32)
     set_target_properties(QtUnitGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
