--- a/src/Mod/Drawing/Gui/CMakeLists.txt
+++ b/src/Mod/Drawing/Gui/CMakeLists.txt
@@ -95,7 +95,7 @@ fc_target_copy_resource(DrawingGui
     ${CMAKE_BINARY_DIR}/Mod/Drawing
     InitGui.py)
 
-SET_BIN_DIR(DrawingGui "DrawingGui" "/Mod/Drawing")
+SET_BIN_DIR(DrawingGui DrawingGui /Mod/Drawing)
 if(WIN32)
     set_target_properties(DrawingGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
