--- a/src/3rdParty/salomesmesh/CMakeLists.txt
+++ b/src/3rdParty/salomesmesh/CMakeLists.txt
@@ -143,7 +143,7 @@ FILE(GLOB SMDS_source_files src/SMDS/*.cpp inc/SMDS*.hxx)
 ADD_LIBRARY(SMDS SHARED ${SMDS_source_files})
 TARGET_LINK_LIBRARIES(SMDS ${SMESH_LIBS})
 
-SET_BIN_DIR(SMDS "SMDS" "/bin")
+SET_BIN_DIR(SMDS SMDS)
 if(WIN32)
     set_target_properties(SMDS PROPERTIES COMPILE_FLAGS "-DSMDS_EXPORTS")
 endif(WIN32)
@@ -156,7 +156,7 @@ FILE(GLOB Driver_source_files src/Driver/*.cpp inc/Driver_*.hxx)
 ADD_LIBRARY(Driver SHARED ${Driver_source_files})
 TARGET_LINK_LIBRARIES(Driver ${SMESH_LIBS})
 
-SET_BIN_DIR(Driver "Driver" "/bin")
+SET_BIN_DIR(Driver Driver)
 if(WIN32)
     set_target_properties(Driver PROPERTIES COMPILE_FLAGS "-DMESHDRIVER_EXPORTS")
 endif(WIN32)
@@ -176,7 +176,7 @@ FILE(GLOB DriverSTL_source_files src/DriverSTL/*.cpp inc/DriverSTL*.h*)
 ADD_LIBRARY(DriverSTL SHARED ${DriverSTL_source_files})
 TARGET_LINK_LIBRARIES(DriverSTL ${SMESH_LIBS} Driver SMDS)
 
-SET_BIN_DIR(DriverSTL "DriverSTL" "/bin")
+SET_BIN_DIR(DriverSTL DriverSTL)
 if(WIN32)
     set_target_properties(DriverSTL PROPERTIES COMPILE_FLAGS "-DMESHDRIVERSTL_EXPORTS")
 endif(WIN32)
@@ -197,7 +197,7 @@ FILE(GLOB DriverDAT_source_files src/DriverDAT/*.cpp inc/DriverDAT*.h*)
 ADD_LIBRARY(DriverDAT SHARED ${DriverDAT_source_files})
 TARGET_LINK_LIBRARIES(DriverDAT ${SMESH_LIBS} SMDS Driver)
 
-SET_BIN_DIR(DriverDAT "DriverDAT" "/bin")
+SET_BIN_DIR(DriverDAT DriverDAT)
 if(WIN32)
     set_target_properties(DriverDAT PROPERTIES COMPILE_FLAGS "-DMESHDRIVERDAT_EXPORTS")
 endif(WIN32)
@@ -217,7 +217,7 @@ FILE(GLOB DriverUNV_source_files src/DriverUNV/*.cpp inc/DriverUNV*.h*)
 ADD_LIBRARY(DriverUNV SHARED ${DriverUNV_source_files})
 TARGET_LINK_LIBRARIES(DriverUNV ${SMESH_LIBS} SMESHDS SMDS Driver)
 
-SET_BIN_DIR(DriverUNV "DriverUNV" "/bin")
+SET_BIN_DIR(DriverUNV DriverUNV)
 if(WIN32)
     set_target_properties(DriverUNV PROPERTIES COMPILE_FLAGS "-DMESHDRIVERUNV_EXPORTS")
 endif(WIN32)
@@ -237,7 +237,7 @@ FILE(GLOB SMESHDS_source_files src/SMESHDS/*.cpp inc/SMESHDS_*.h*)
 ADD_LIBRARY(SMESHDS SHARED ${SMESHDS_source_files})
 TARGET_LINK_LIBRARIES(SMESHDS ${SMESH_LIBS} SMDS )
 
-SET_BIN_DIR(SMESHDS "SMESHDS" "/bin")
+SET_BIN_DIR(SMESHDS SMESHDS)
 
 
 #IF(MINGW)
@@ -251,7 +251,7 @@ FILE(GLOB SMESH_source_files src/SMESH/*.cpp src/Controls/*.cpp inc/SMESH_*.h*)
 ADD_LIBRARY(SMESH SHARED ${SMESH_source_files})
 TARGET_LINK_LIBRARIES(SMESH SMDS SMESHDS  Driver DriverSTL DriverDAT DriverUNV ${SMESH_LIBS})
  
-SET_BIN_DIR(SMESH "SMESH" "/bin")
+SET_BIN_DIR(SMESH SMESH)
 if(WIN32)
     set_target_properties(SMESH PROPERTIES COMPILE_FLAGS "-DSMESH_EXPORTS -DSMESHCONTROLS_EXPORTS -DSMESHimpl_EXPORTS")
 endif(WIN32)
@@ -296,7 +296,7 @@ endif(MSVC)
 
 ADD_LIBRARY(MEFISTO2 SHARED ${MEFISTO2_source_files})
 
-SET_BIN_DIR(MEFISTO2 "MEFISTO2" "/bin")
+SET_BIN_DIR(MEFISTO2 MEFISTO2)
 if(MSVC)
     TARGET_LINK_LIBRARIES(MEFISTO2 ${SMESH_LIBS} MEFISTO2f.lib) # in case of Windows link the prebuild Fortran lib
     if(CMAKE_SIZEOF_VOID_P EQUAL 8)
@@ -320,7 +320,7 @@ FILE(GLOB StdMeshers_source_files src/StdMeshers/*.cpp inc/StdMeshers_*.h*)
 ADD_LIBRARY(StdMeshers SHARED ${StdMeshers_source_files})
 TARGET_LINK_LIBRARIES(StdMeshers SMESH ${SMESH_LIBS} MEFISTO2)
 
-SET_BIN_DIR(StdMeshers "StdMeshers" "/bin")
+SET_BIN_DIR(StdMeshers StdMeshers)
 if(WIN32)
     set_target_properties(StdMeshers PROPERTIES COMPILE_FLAGS "-DSTDMESHERS_EXPORTS")
 else(WIN32)
@@ -346,7 +346,7 @@ FILE(GLOB NETGENPlugin_source_files src/NETGENPlugin/*.cpp inc/NETGENPlugin_*.h*
 ADD_LIBRARY(NETGENPlugin SHARED ${NETGENPlugin_source_files})
 TARGET_LINK_LIBRARIES(NETGENPlugin SMDS SMESHDS SMESH StdMeshers  ${SMESH_LIBS} )
 
-SET_BIN_DIR(NETGENPlugin "NETGENPlugin" "/bin")
+SET_BIN_DIR(NETGENPlugin NETGENPlugin)
 if(WIN32)
     set_target_properties(NETGENPlugin PROPERTIES COMPILE_FLAGS "-DNETGENPLUGIN_EXPORTS -DNO_PARALLEL_THREADS -DOCCGEOMETRY -DNETGEN_V5")
 endif(WIN32)
