Start profile lib in sketcher

--- a/src/Mod/Sketcher/App/CMakeLists.txt
+++ b/src/Mod/Sketcher/App/CMakeLists.txt
@@ -103,6 +103,8 @@ SET(Sketcher_Scripts
     Init.py
     SketcherExample.py
 	TestSketcherApp.py
+	Profiles.py
+	ProfileLib/Hexagon.py
 )
 
 add_library(Sketcher SHARED ${Sketcher_SRCS})
