+ remove word 'mesh' where not needed in build options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,10 +125,10 @@ OPTION(FREECAD_BUILD_JTREADER "Build the FreeCAD jt reader module" OFF)
 OPTION(FREECAD_BUILD_MATERIAL "Build the FreeCAD material module" ON)
 OPTION(FREECAD_BUILD_MESH "Build the FreeCAD mesh module" ON)
 OPTION(FREECAD_BUILD_MESH_PART "Build the FreeCAD mesh part module" ON)
-OPTION(FREECAD_BUILD_OPENSCAD "Build the FreeCAD mesh openscad module" ON)
-OPTION(FREECAD_BUILD_PART "Build the FreeCAD mesh part module" ON)
-OPTION(FREECAD_BUILD_PART_DESIGN "Build the FreeCAD mesh part design module" ON)
-OPTION(FREECAD_BUILD_PLOT "Build the FreeCAD mesh plot module" ON)
+OPTION(FREECAD_BUILD_OPENSCAD "Build the FreeCAD openscad module" ON)
+OPTION(FREECAD_BUILD_PART "Build the FreeCAD part module" ON)
+OPTION(FREECAD_BUILD_PART_DESIGN "Build the FreeCAD part design module" ON)
+OPTION(FREECAD_BUILD_PLOT "Build the FreeCAD plot module" ON)
 OPTION(FREECAD_BUILD_POINTS "Build the FreeCAD points module" ON)
 OPTION(FREECAD_BUILD_RAYTRACING "Build the FreeCAD ray tracing module" ON)
 OPTION(FREECAD_BUILD_REVERSEENGINEERING "Build the FreeCAD reverse engineering module" ON)
