--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -170,7 +170,7 @@ SET(FreeCADApp_SRCS
 
 if(MSVC)
     add_definitions(-D_PreComp_)
-    ADD_MSVC_PRECOMPILED_HEADER("PreCompiled.h" "PreCompiled.cpp" FreeCADApp_CPP_SRCS)
+    ADD_MSVC_PRECOMPILED_HEADER(FreeCADApp PreCompiled.h PreCompiled.cpp FreeCADApp_CPP_SRCS)
 endif(MSVC)
 
 add_library(FreeCADApp SHARED ${FreeCADApp_SRCS})
