--- a/src/Mod/Drawing/App/CMakeLists.txt
+++ b/src/Mod/Drawing/App/CMakeLists.txt
@@ -87,6 +87,7 @@ fc_target_copy_resource(Drawing
 
 SET_BIN_DIR(Drawing Drawing /Mod/Drawing)
 if(WIN32)
+    set_target_properties(Drawing PROPERTIES PREFIX "")
     set_target_properties(Drawing PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
