--- a/src/Mod/Image/App/CMakeLists.txt
+++ b/src/Mod/Image/App/CMakeLists.txt
@@ -39,6 +39,7 @@ fc_target_copy_resource(Image
 
 SET_BIN_DIR(Image Image /Mod/Image)
 if(WIN32)
+    set_target_properties(Image PROPERTIES PREFIX "")
     set_target_properties(Image PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
