--- a/src/Mod/Import/Gui/CMakeLists.txt
+++ b/src/Mod/Import/Gui/CMakeLists.txt
@@ -48,6 +48,7 @@ fc_target_copy_resource(ImportGui
 
 SET_BIN_DIR(ImportGui ImportGui /Mod/Import)
 if(WIN32)
+    set_target_properties(ImportGui PROPERTIES PREFIX "")
     set_target_properties(ImportGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
