--- a/src/Mod/Inspection/App/CMakeLists.txt
+++ b/src/Mod/Inspection/App/CMakeLists.txt
@@ -44,6 +44,7 @@ fc_target_copy_resource(Inspection
 
 SET_BIN_DIR(Inspection Inspection /Mod/Inspection)
 if(WIN32)
+    set_target_properties(Inspection PROPERTIES PREFIX "")
     set_target_properties(Inspection PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
