--- a/src/Mod/Points/Gui/CMakeLists.txt
+++ b/src/Mod/Points/Gui/CMakeLists.txt
@@ -63,6 +63,7 @@ fc_target_copy_resource(PointsGui
 
 SET_BIN_DIR(PointsGui PointsGui /Mod/Points)
 if(WIN32)
+    set_target_properties(PointsGui PROPERTIES PREFIX "")
     set_target_properties(PointsGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
