--- a/src/Mod/ReverseEngineering/Gui/CMakeLists.txt
+++ b/src/Mod/ReverseEngineering/Gui/CMakeLists.txt
@@ -48,6 +48,7 @@ fc_target_copy_resource(ReverseEngineeringGui
 
 SET_BIN_DIR(ReverseEngineeringGui ReverseEngineeringGui /Mod/ReverseEngineering)
 if(WIN32)
+    set_target_properties(ReverseEngineeringGui PROPERTIES PREFIX "")
     set_target_properties(ReverseEngineeringGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
