--- a/src/Mod/Robot/App/CMakeLists.txt
+++ b/src/Mod/Robot/App/CMakeLists.txt
@@ -140,6 +140,7 @@ fc_target_copy_resource(Robot
 
 SET_BIN_DIR(Robot Robot /Mod/Robot)
 if(WIN32)
+    set_target_properties(Robot PROPERTIES PREFIX "")
     set_target_properties(Robot PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
