--- a/src/Mod/Sketcher/App/CMakeLists.txt
+++ b/src/Mod/Sketcher/App/CMakeLists.txt
@@ -119,6 +119,7 @@ fc_target_copy_resource(Sketcher
 
 SET_BIN_DIR(Sketcher Sketcher /Mod/Sketcher)
 if(WIN32)
+    set_target_properties(Sketcher PROPERTIES PREFIX "")
     set_target_properties(Sketcher PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
