--- a/src/Mod/Web/App/CMakeLists.txt
+++ b/src/Mod/Web/App/CMakeLists.txt
@@ -48,6 +48,7 @@ fc_target_copy_resource(Web
 
 SET_BIN_DIR(Web Web /Mod/Web)
 if(WIN32)
+    set_target_properties(Web PROPERTIES PREFIX "")
     set_target_properties(Web PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
