--- a/src/Mod/Web/Gui/CMakeLists.txt
+++ b/src/Mod/Web/Gui/CMakeLists.txt
@@ -45,6 +45,7 @@ fc_target_copy_resource(WebGui
 
 SET_BIN_DIR(WebGui WebGui /Mod/Web)
 if(WIN32)
+    set_target_properties(WebGui PROPERTIES PREFIX "")
     set_target_properties(WebGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
