--- a/src/Tools/_TEMPLATE_/App/CMakeLists.txt
+++ b/src/Tools/_TEMPLATE_/App/CMakeLists.txt
@@ -29,6 +29,7 @@ fc_target_copy_resource(_TEMPLATE_
 
 SET_BIN_DIR(_TEMPLATE_ _TEMPLATE_ /Mod/_TEMPLATE_)
 if(WIN32)
+    set_target_properties(_TEMPLATE_ PROPERTIES PREFIX "")
     set_target_properties(_TEMPLATE_ PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
