--- a/src/Mod/Complete/App/CMakeLists.txt
+++ b/src/Mod/Complete/App/CMakeLists.txt
@@ -32,6 +32,7 @@ fc_target_copy_resource(Complete
 
 SET_BIN_DIR(Complete Complete /Mod/Complete)
 if(WIN32)
+    set_target_properties(Complete PROPERTIES PREFIX "")
     set_target_properties(Complete PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
