--- a/src/Mod/Complete/Gui/CMakeLists.txt
+++ b/src/Mod/Complete/Gui/CMakeLists.txt
@@ -38,6 +38,7 @@ fc_target_copy_resource(CompleteGui
 
 SET_BIN_DIR(CompleteGui CompleteGui /Mod/Complete)
 if(WIN32)
+    set_target_properties(CompleteGui PROPERTIES PREFIX "")
     set_target_properties(CompleteGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
