--- a/src/Mod/Points/App/CMakeLists.txt
+++ b/src/Mod/Points/App/CMakeLists.txt
@@ -52,6 +52,7 @@ fc_target_copy_resource(Points
 
 SET_BIN_DIR(Points Points /Mod/Points)
 if(WIN32)
+    set_target_properties(Points PROPERTIES PREFIX "")
     set_target_properties(Points PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
