--- a/src/Mod/Sandbox/App/CMakeLists.txt
+++ b/src/Mod/Sandbox/App/CMakeLists.txt
@@ -40,6 +40,7 @@ fc_target_copy_resource(Sandbox
 
 SET_BIN_DIR(Sandbox Sandbox /Mod/Sandbox)
 if(WIN32)
+    set_target_properties(Sandbox PROPERTIES PREFIX "")
     set_target_properties(Sandbox PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
