--- a/src/Mod/Test/Gui/CMakeLists.txt
+++ b/src/Mod/Test/Gui/CMakeLists.txt
@@ -57,6 +57,7 @@ fc_copy_sources(QtUnitGui "${CMAKE_BINARY_DIR}/Mod/Test" qtunittest.py)
 
 SET_BIN_DIR(QtUnitGui QtUnitGui /Mod/Test)
 if(WIN32)
+    set_target_properties(QtUnitGui PROPERTIES PREFIX "")
     set_target_properties(QtUnitGui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
