--- a/src/Tools/_TEMPLATE_/Gui/CMakeLists.txt
+++ b/src/Tools/_TEMPLATE_/Gui/CMakeLists.txt
@@ -39,6 +39,7 @@ fc_target_copy_resource(_TEMPLATE_Gui
 
 SET_BIN_DIR(_TEMPLATE_Gui _TEMPLATE_Gui /Mod/_TEMPLATE_)
 if(WIN32)
+    set_target_properties(_TEMPLATE_Gui PROPERTIES PREFIX "")
     set_target_properties(_TEMPLATE_Gui PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
     
